--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs==1.4.4
 bidict==0.23.0
 blinker==1.7.0
 click==8.1.7
@@ -12,9 +13,14 @@ h11==0.14.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+packaging==23.2
+PyExecJS==1.5.1
+pyparsing==3.1.1
 python-engineio==4.9.0
 python-socketio==5.11.1
+pyTwistyScrambler==1.6
 simple-websocket==1.0.0
+six==1.16.0
 SQLAlchemy==2.0.27
 typing_extensions==4.9.0
 Werkzeug==3.0.1
