--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "tailwindcss": "^3.4.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
@@ -18,6 +19,7 @@
     "@tweenjs/tween.js": "^23.1.1",
     "@types/three": "^0.163.0",
     "buffer": "^6.0.3",
+    "flowbite": "^2.3.0",
     "process": "^0.11.10",
     "socket.io-client": "^4.7.5",
     "three": "^0.163.0",
