--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
 instance/site.db
-instance/*
+instance/
 env/
 __pycache__/
 node_modules
 static/dist
+.mypy_chage/
 
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
