--- a/package.json
+++ b/package.json
@@ -2,29 +2,70 @@
   "name": "bp",
   "version": "1.0.0",
   "description": "## Setup ```Shell # install python3 virtualenv package pip install virtualenv",
+  "private": true,
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@d4c/numjs": "^0.17.34",
+    "@mantine/core": "^7.7.1",
+    "@mantine/form": "^7.7.1",
+    "@mantine/hooks": "^7.7.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@tweenjs/tween.js": "^23.1.1",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.95",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
     "@types/three": "^0.163.0",
     "buffer": "^6.0.3",
     "flowbite": "^2.3.0",
     "process": "^0.11.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.5",
     "three": "^0.163.0",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.3",
-    "util": "^0.12.5"
-  }
+    "typescript": "^4.9.5",
+    "util": "^0.12.5",
+    "web-vitals": "^2.1.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:8080"
 }
