--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ h11==0.14.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+numpy==1.26.4
 packaging==23.2
 PyExecJS==1.5.1
 pyparsing==3.1.1
