--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.5",
     "three": "^0.163.0",
+    "timers-browserify": "^2.0.12",
     "ts-loader": "^9.5.1",
     "typescript": "^4.9.5",
     "util": "^0.12.5",
