--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@types/react-dom": "^18.2.24",
     "@types/three": "^0.163.0",
     "buffer": "^6.0.3",
+    "immer": "^10.1.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
