--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ server {
     error_page   500 502 503 504  /50x.html;
 
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.html;
         add_header Cache-Control "no-cache";
     }
 
@@ -17,6 +17,10 @@ server {
     }
 
     location /api {
+        proxy_pass http://api:8080;
+    }
+
+    location /socket.io {
         proxy_pass http://api:8080;
     }
 }
