--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ Jinja2==3.1.4
 MarkupSafe==2.1.5
 numpy==1.26.4
 packaging==24.0
+psycopg2-binary==2.9.9
 PyExecJS==1.5.1
 pyparsing==3.1.2
 python-dotenv==1.0.1
