--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
       context: .
       dockerfile: Dockerfile.api
     image: react-flask-app-api
+    depends_on:
+      db:
+        condition: service_healthy
   client:
     build:
       context: .
@@ -11,3 +14,26 @@ services:
     image: react-flask-app-client
     ports:
       - "3000:80"
+    depends_on:
+      db:
+        condition: service_healthy
+  db:
+    image: postgres:latest
+    restart: unless-stopped
+    container_name: db
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=DB
+      - PGPORT=5433
+    ports:
+      - "5433:5433"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+volumes:
+  postgres_data:
