--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -2,8 +2,11 @@
 FROM node:20-alpine as build-step
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
-COPY frontend ./
+
+COPY package*.json ./
 RUN yarn install
+
+COPY frontend ./
 RUN yarn build
 
 # Build step #2: build an nginx container
