rename docker images and dockerfiles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 services:
-  api:
+  backend:
     build:
       context: .
-      dockerfile: Dockerfile.api
-    image: react-flask-app-api
+      dockerfile: backend.Dockerfile
+    image: backend
+    # wait until the db is ready
     depends_on:
       db:
         condition: service_healthy
@@ -15,13 +16,14 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_PORT=${DB_PORT}
       - APP_SECRET=${APP_SECRET}
-  client:
+  frontend:
     build:
       context: .
-      dockerfile: Dockerfile.frontend
-    image: react-flask-app-client
+      dockerfile: frontend.Dockerfile
+    image: frontend
     ports:
       - "${APP_PORT}:80"
+    # wait until db is ready
     depends_on:
       db:
         condition: service_healthy
@@ -38,6 +40,7 @@ services:
       - "${DB_PORT}:${DB_PORT}"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    # check whether the db is ready or not
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME} -d ${DB_NAME} -p ${DB_PORT}"]
       interval: 5s
