--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-DB_USERNAME=databaseadmin
-DB_PASSWORD=databasesecretpassword
-DB_NAME=speedsolving
+DB_USERNAME=database_admin
+DB_PASSWORD=database_secretpassword_bi381osa
+DB_NAME=rubiksrace
 DB_PORT=5433
 
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin_password
+ADMIN_PASSWORD=admin_password_apo9121oh
 
 APP_PORT=3000
-APP_SECRET=secret_43b32o4320n84902n4320
+APP_SECRET=secret_350d87842198b44959c1db0f9138766f
