--- a/nginx.conf
+++ b/nginx.conf
@@ -17,14 +17,14 @@ server {
     }
 
     location /api {
-        proxy_pass http://api:8080;
+        proxy_pass http://backend:8080;
     }
 
     location /socket.io/ {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
 
-      proxy_pass http://api:8080;
+      proxy_pass http://backend:8080;
 
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
