refactoring and fix lobby dc

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME=database_admin
 DB_PASSWORD=database_secretpassword_bi381osa
-DB_NAME=rubiksrace
+DB_NAME=virtualcubedb
 DB_PORT=5433
 
 ADMIN_USERNAME=admin
