--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ dnspython==2.6.1
 eventlet==0.36.1
 Flask==3.0.3
 Flask-Login==0.6.3
+Flask-Mail==0.9.1
 Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
@@ -17,6 +18,7 @@ numpy==1.26.4
 packaging==24.0
 psycopg2-binary==2.9.9
 PyExecJS==1.5.1
+PyJWT==2.8.0
 pyparsing==3.1.2
 python-dotenv==1.0.1
 python-engineio==4.9.0
