--- a/docker-compose-development.yml
+++ b/docker-compose-development.yml
@@ -1,30 +1,36 @@
 services:
-  backend:
+  backend_devel:
     build:
       context: .
       dockerfile: backend.Dockerfile
     # wait until the db is ready
     depends_on:
-      db:
+      db_devel:
         condition: service_healthy
     env_file:
-      - .env
+    - .env
     environment:
-      - DB_HOST=db
-  frontend:
+    - DB_HOST=db_devel
+    volumes:
+      - "./backend/:/app"
+  frontend_devel:
     build:
       context: .
-      dockerfile: frontend.Dockerfile
+      dockerfile: frontend-development.Dockerfile
     ports:
-      - "${APP_PORT}:80"
+    - "3000:3000"
     # wait until db is ready
     depends_on:
-      db:
+      db_devel:
         condition: service_healthy
-  db:
+    environment:
+      - WATCHPACK_POLLING=true # enable browser live reload
+    volumes:
+      - "./frontend/:/app"
+  db_devel:
     image: postgres:latest
     restart: always
-    container_name: db
+    container_name: db_devel
     environment:
       - POSTGRES_USER=${DB_USERNAME}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
@@ -33,7 +39,7 @@ services:
     ports:
       - "${DB_PORT}:${DB_PORT}"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_devel:/var/lib/postgresql/data
     # check whether the db is ready or not
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME} -d ${DB_NAME} -p ${DB_PORT}"]
@@ -41,4 +47,4 @@ services:
       timeout: 5s
       retries: 5
 volumes:
-  postgres_data:
+  postgres_data_devel:
